--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ image = "0.24"
 anyhow = "1.0"
 gilrs = "0.10"  # Xbox controller support
 pollster = "0.3"
+warp = "0.3"
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
